--- a/gnome/nos-dark/gtk.css
+++ b/gnome/nos-dark/gtk.css
@@ -1,2 +1,2 @@
-@define-color accent_color #ffbe6f;
-@define-color accent_bg_color #ff7800;
+@define-color accent_color #e95420;
+@define-color accent_bg_color #e95420;
