--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -1,44 +1,72 @@
 * {
+  font-family: "Google Sans", "Material Design Icons";
 	background-image: none;
+  transition: 20ms;
 }
+
 window {
-	background-color: rgba(12, 12, 12, 0.9);
+	background-color: rgba(12, 12, 12, 0.7);
 }
+
 button {
-    color: #FFFFFF;
-	background-color: #1E1E1E;
-	border-style: solid;
-	border-width: 2px;
+  color: #FFFFFF;
+  font-size: 20px;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 25%;
+	background-color: rgba(12, 12, 12, 0.8);
+	border-style: solid;
+	border-width: 2px;
+  border-color: #e95420;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 button:focus, button:active, button:hover {
-	background-color: #3700B3;
+
+	background-color: rgba(15, 15, 15, 1);
 	outline-style: none;
 }
 
+/* 
+----------------------------------------------------- 
+Buttons
+----------------------------------------------------- 
+*/
+
 #lock {
-    background-image: image(url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+	margin: 10px;
+	border-radius: 20px;
+	background-image: image(url("icons/lock.png"));
 }
 
 #logout {
-    background-image: image(url("/usr/share/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
+	margin: 10px;
+	border-radius: 20px;
+	background-image: image(url("icons/logout.png"));
 }
 
 #suspend {
-    background-image: image(url("/usr/share/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
+	margin: 10px;
+	border-radius: 20px;
+	background-image: image(url("icons/suspend.png"));
 }
 
 #hibernate {
-    background-image: image(url("/usr/share/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
+	margin: 10px;
+	border-radius: 20px;
+	background-image: image(url("icons/hibernate.png"));
 }
 
 #shutdown {
-    background-image: image(url("/usr/share/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
+	margin: 10px;
+	border-radius: 20px;
+	background-image: image(url("icons/shutdown.png"));
 }
 
 #reboot {
-    background-image: image(url("/usr/share/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
+	margin: 10px;
+	border-radius: 20px;
+	background-image: image(url("icons/reboot.png"));
 }
+
+
