--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,3 +1,5 @@
+@import "../theme.css";
+
 * {
   font-family: "Google Sans";
   color: #e5e9f0;
@@ -5,12 +7,11 @@
 }
 
 #window {
-  /* background: rgba(41, 46, 66, 0.5); */
-  background: rgba(35, 31, 32, 0.9);
+  background: rgba(15, 19, 26, 0.9);
   margin: auto;
   padding: 10px;
   border-radius: 20px;
-  border: 4px solid #e95420;
+  border: 2px solid #e95420;
 }
 
 #input {
@@ -33,9 +34,12 @@
 }
 
 #entry:selected {
-  background-color: #2e3440;
+  background-color: rgba(71, 82, 102, 0.2);
+  border: none;
 }
 
 #text {
   margin: 2px;
 }
+
+#text:selected {}
