--- a/wofi/style.css
+++ b/wofi/style.css
@@ -7,11 +7,11 @@
 }
 
 #window {
-  background: rgba(15, 19, 26, 0.9);
+  background: rgba(30, 30, 46, 0.9);
   margin: auto;
   padding: 10px;
   border-radius: 20px;
-  border: 2px solid #e95420;
+  border: 2px solid #fab387;
 }
 
 #input {
@@ -34,7 +34,7 @@
 }
 
 #entry:selected {
-  background-color: rgba(71, 82, 102, 0.2);
+  background-color: rgba(69, 71, 90, 0.2);
   border: none;
   outline: none;
 }
