feat: update wlogout theme

--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -1,30 +1,32 @@
 * {
   font-family: "Google Sans", "Material Design Icons";
-	background-image: none;
+  background-image: none;
   transition: 20ms;
 }
 
 window {
-	background-color: rgba(12, 12, 12, 0.7);
+  background-color: rgba(30, 30, 46, 0.7);
 }
 
 button {
-  color: #FFFFFF;
+  color: #cdd6f4;
   font-size: 20px;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 25%;
-	background-color: rgba(12, 12, 12, 0.8);
-	border-style: solid;
-	border-width: 2px;
-  border-color: #e95420;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 25%;
+  background-color: rgba(49, 50, 68, 0.8);
+  border-style: solid;
+  border-width: 2px;
+  border-color: #fab387;
+  box-shadow: 0 4px 8px 0 rgba(49, 50, 68, 0.2), 0 6px 20px 0 rgba(49, 50, 68, 0.19);
 }
 
-button:focus, button:active, button:hover {
+button:focus,
+button:active,
+button:hover {
 
-	background-color: rgba(15, 15, 15, 1);
-	outline-style: none;
+  background-color: rgba(30, 30, 46, 1);
+  outline-style: none;
 }
 
 /* 
@@ -34,39 +36,37 @@ Buttons
 */
 
 #lock {
-	margin: 10px;
-	border-radius: 20px;
-	background-image: image(url("icons/lock.png"));
+  margin: 10px;
+  border-radius: 20px;
+  background-image: image(url("icons/lock.png"));
 }
 
 #logout {
-	margin: 10px;
-	border-radius: 20px;
-	background-image: image(url("icons/logout.png"));
+  margin: 10px;
+  border-radius: 20px;
+  background-image: image(url("icons/logout.png"));
 }
 
 #suspend {
-	margin: 10px;
-	border-radius: 20px;
-	background-image: image(url("icons/suspend.png"));
+  margin: 10px;
+  border-radius: 20px;
+  background-image: image(url("icons/suspend.png"));
 }
 
 #hibernate {
-	margin: 10px;
-	border-radius: 20px;
-	background-image: image(url("icons/hibernate.png"));
+  margin: 10px;
+  border-radius: 20px;
+  background-image: image(url("icons/hibernate.png"));
 }
 
 #shutdown {
-	margin: 10px;
-	border-radius: 20px;
-	background-image: image(url("icons/shutdown.png"));
+  margin: 10px;
+  border-radius: 20px;
+  background-image: image(url("icons/shutdown.png"));
 }
 
 #reboot {
-	margin: 10px;
-	border-radius: 20px;
-	background-image: image(url("icons/reboot.png"));
+  margin: 10px;
+  border-radius: 20px;
+  background-image: image(url("icons/reboot.png"));
 }
-
-
