--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
   border: none;
-  border-radius: 0;
+  border-radius: 10px;
   font-family: "Google Sans", "Material Design Icons";
   font-weight: bold;
   font-size: 16px;
@@ -25,12 +25,12 @@ window {
   /* color: rgba(217, 216, 216, 1); */
   /* background: rgba(35, 31, 32, 0.6); */
   background-color: alpha(@base, 0.6);
-  border: 2px solid alpha(@crust, 0.3);
+  border: 2px solid @surface1;
 }
 
 window#waybar.solo {
   background-color: alpha(@base, 0.6);
-  border: 2px solid alpha(@crust, 0.3);
+  border: 2px solid @surface1;
   /* color: rgba(217, 216, 216, 1); */
   /* background: rgba(35, 31, 32, 0.85); */
 }
